[package]
    edition="2021"
    name   ="fibonacci_sequence"
    version="0.1.0"

[dependencies]
    num-bigint="0.4"
    rayon     ="1.10.0"

[profile.release]
    codegen-units=1
    debug        =false
    incremental  =false
    lto          ="fat"
    opt-level    =3
    panic        ="abort"
